# VTT

./: .gitignore  README.md  startup.sh
backend/: alembic.ini  pyproject.toml  startup.sh
backend/app/: main.py
backend/app/api/: api.py  transcription.py
backend/app/api/transcription/: transcription.py
backend/app/llm/audio_classifier_graph/: chains.py  models.py  prompts.py
backend/app/models/: __init__.py  transcription.py
backend/app/services/: transcription_service.py
backend/database/: db.py  transcription.py
backend/migrations/: env.py
backend/migrations/versions/: 34103bd256ee_add_resume_field.py  create_transcription_table.py  e4751aebacf7_update_topic_column_type.py
frontend/: next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/components/: AudioUploader.tsx
frontend/pages/: index.tsx
