[tool.poetry]
name = "vtt-backend"
version = "0.1.0"
description = "Voice to Tool - Backend service for voice processing and tool integration"
authors = ["Marcel Lewi <marchulew@gmail.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
python-dotenv = "^1.0.0"
openai-whisper = "20240930"
sqlmodel = "^0.0.24"
alembic = "^1.15.2"
psycopg2-binary = "^2.9.10"
python-multipart = "^0.0.20"
pydantic = ">=2,<3"

# LangChain ecosystem
langchain       = "0.3.23"    # latest 0.3.x patch :contentReference[oaicite:2]{index=2}
langchain-core  = "0.3.54"    # latest core 0.3.x patch :contentReference[oaicite:3]{index=3}
langchain-openai= "0.2.0"     # v0.2.x to match LangChain v0.3 :contentReference[oaicite:4]{index=4}
langgraph       = "0.2.26"  

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 